policies/tests/least-privilege-connsecret/resources.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: good-rb
  namespace: team-demo
subjects:
- kind: ServiceAccount
  name: app
  namespace: team-demo
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: edit
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: bad-rb-other-ns
  namespace: team-demo
subjects:
- kind: ServiceAccount
  name: app
  namespace: team-ops
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: edit
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: bad-rb-admin
  namespace: team-demo
subjects:
- kind: ServiceAccount
  name: app
  namespace: team-demo
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: cluster-admin
